# QA-Python

./: .gitignore  .pre-commit-config.yaml  fix_me.py  pyproject.toml  ruff.toml
common/: __init__.py  exceptions.py  typings.py
src/: __init__.py  circle.py  figure.py  rectangle.py  square.py  triangle.py
